--- a/package.json
+++ b/package.json
@@ -5,9 +5,28 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build:dev": "tsc --project tsconfig.json",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "clean": "rm -rf dist"
+    "dev:watch": "nodemon --watch src --ext ts,js --exec \"npm run build && npm run start\"",
+    "dev:fast": "nodemon --watch src --ext ts --exec \"ts-node src/index.ts\"",
+    "watch": "nodemon",
+    "watch:ts": "nodemon --config nodemon-ts.json",
+    "watch:dev": "nodemon --watch src --ext ts,js,json --exec \"npm run build:dev && npm run start\"",
+    "clean": "rm -rf dist",
+    "start:script": "./start.sh",
+    "stop:script": "./stop.sh",
+    "restart": "./stop.sh && sleep 2 && ./start.sh",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:comprehensive": "node comprehensive-test.js",
+    "test:results": "node view-test-results.js",
+    "check:env": "node check-environment.js",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "check": "npm run lint && npm run test"
   },
   "keywords": [
     "intelligent",
@@ -23,9 +42,11 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@types/multer": "^2.0.0",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.4",
     "helmet": "^7.1.0",
     "langchain": "^0.1.0",
     "multer": "^2.0.2",
@@ -37,7 +58,12 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.0",
+    "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
