--- a/env.example
+++ b/env.example
@@ -1,20 +1,19 @@
-# Neo4j 数据库配置
+# Neo4j Config
 NEO4J_URI=neo4j://localhost:7687
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=12345678
+NEO4J_PASSWORD=your_password_here_please
 NEO4J_DATABASE=neo4j
 
-# Google Gemini API配置
-GEMINI_API_KEY=AIzaSyDTLe9kvb0sa5mSg-gDEmW4TZw9BrfEjxo
+# Google Gemini API Config
+GEMINI_API_KEY=your_key_here_please
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_EMBEDDINGS_MODEL=embedding-001
 GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta
 
-# 应用配置
 PORT=3000
 NODE_ENV=development
 
-# 向量索引配置
+# VECTOR Config
 VECTOR_INDEX_BATCH_SIZE=100
 VECTOR_INDEX_MAX_WORKERS=4
 VECTOR_INDEX_DIMENSION=768
@@ -23,7 +22,7 @@ VECTOR_INDEX_TIMEOUT=30000
 VECTOR_INDEX_ENABLE_CACHE=true
 VECTOR_INDEX_CACHE_DIR=./cache/vector-index
 
-# 文档处理配置
+# Document Process Config
 CHUNK_SIZE=1000
 OVERLAP=200
 MAX_FILE_SIZE=10485760 
